--- a/style.css
+++ b/style.css
@@ -27,6 +27,14 @@ h1 {
     letter-spacing: 0.4rem; /* Espaçamento entre letras */
 }
 
+/* Estiliza os títulos h3 */
+h3 {
+    font-size: 1.5rem; /* Tamanho da fonte */
+    color: #222831; /* Cor do texto */
+    text-align: center; /* Alinha o texto ao centro */
+    letter-spacing: 0.4rem; /* Espaçamento entre letras */
+}
+
 /* Estiliza as seções da página */
 section {
     display: flex; /* Usa Flexbox para layout */
