--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ section img {
 
 /* Estiliza o rodapé da página */
 footer {
-    background-color: ##353131; /* Cor de fundo do rodapé */
+    background-color: #353131; /* Cor de fundo do rodapé */
     color: ##fec502; /* Cor do texto */
     text-align: center; /* Alinha o texto ao centro */
     padding: 0; /* Espaçamento interno */
