--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ section img {
 /* Estiliza o rodapé da página */
 footer {
     background-color: #353131; /* Cor de fundo do rodapé */
-    color: #be8801; /* Cor do texto */
+    color: #a2a2a1; /* Cor do texto */
     text-align: center; /* Alinha o texto ao centro */
     padding: 0; /* Espaçamento interno */
     width: 100%; /* Largura total da página */
